--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,12 @@
   color: #61dafb;
 }
 
+ul {
+  list-style: none;
+  margin: 3px;
+  padding: 5px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -35,4 +41,116 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.btn-primary {
+  color: white;
+  font-size: large;
+  margin-top: 10px;
+  border: 2px solid black
+}
+
+.container {
+  max-width: 1100px;
+  margin: auto;
+  overflow: hidden;
+  padding: 0 2rem;
+  margin-top: 6rem;
+  margin-bottom: 3rem;
+}
+
+/* Text Styles*/
+.x-large {
+  font-size: 4rem;
+  line-height: 1.2;
+  margin-bottom: 1rem;
+}
+
+.large {
+  font-size: 3rem;
+  line-height: 1.2;
+  margin-bottom: 1rem;
+}
+
+.medium{
+  font-size: 2.2rem;
+  line-height: 0.8;
+}
+
+.lead {
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+
+/* Forms */
+.form .form-group {
+  margin: 1.2rem auto;
+  width: 40vw;
+}
+
+.form .form-text {
+  display: block;
+  margin-top: 0.3rem;
+  color: #888;
+}
+
+.form input[type="text"],
+.form input[type="email"],
+.form input[type="password"],
+.form input[type="file"],
+.form select,
+.form textarea {
+  display: block;
+  width: 100%;
+  padding: 0.4rem;
+  font-size: 1.2rem;
+  border: 1px solid #ccc;
+}
+
+.form input[type="submit"],
+button {
+  font: inherit;
+}
+/* Navbar */
+.main-navbar {
+  display: flex;
+  left: 0px;
+  position: fixed;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.7rem 2rem;
+  z-index: 1;
+  width: 100%;
+  top: 0;
+  border-bottom: solid 1px var(--primary-color);
+  opacity: 0.9;
+}
+
+.main-navbar ul {
+  display: flex;
+}
+
+.main-navbar ul li{
+  display: inline;
+  padding: 3px 10px;
+  font-size: 22px;
+}
+
+.main-navbar Link {
+  color: #fff;
+  padding: 0.45rem;
+  margin: 0 0.25rem;
+}
+
+.main-navbar Link:hover {
+  color: var(--hover-color);
+}
+
+.main-navbar .welcome span {
+  margin-right: 0.6rem;
+}
+
+/*background*/
+.bg-dark {
+  color: #000;
 }
